--- a/.github/workflows/bi-connectors.yml
+++ b/.github/workflows/bi-connectors.yml
@@ -11,6 +11,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+    - uses: actions/checkout@v2
     - name: Prepare Power BI ODBC connector for 'OpenSearch Project'
       run: |
         cp OpenSearchProject.pq OpenSearchProject.m
