Add libiodbc prefix to CMAKE_SYSTEM_PREFIX_PATH
This change accounts for brew install libiodbc
no longer updating system paths with libiodbc
include and lib directories.

Signed-off-by: MaxKsyunz <maxk@bitquilltech.com>

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -120,7 +120,7 @@ elseif(APPLE)
 								SQLCOLATTRIBUTE_SQLLEN
 							)
 	# iODBC includes
-	include_directories(/usr/local/include)
+	include_directories(/usr/local/opt/libiodbc/include)
 elseif(UNIX)
 	# Unix specific
 	add_compile_definitions	(	WITH_UNIXODBC	
