--- a/src/sqlodbc/opensearch_odbc.rc
+++ b/src/sqlodbc/opensearch_odbc.rc
@@ -72,9 +72,9 @@ BEGIN
     GROUPBOX        "Connection Settings",IDC_CONN_SETTINGS,7,28,261,56
     LTEXT           "Host",IDC_STATIC,20,46,20,8,NOT WS_GROUP
     EDITTEXT        IDC_SERVER,60,44,192,12,ES_AUTOHSCROLL
-    LTEXT           "&Port",IDC_STATIC,20,66,19,8
+    LTEXT           "Port",IDC_STATIC,20,66,19,8
     EDITTEXT        IDC_PORT,60,64,192,13,ES_AUTOHSCROLL
-    GROUPBOX        "Authentication Settings",IDC_AUTH_SETTINGS,7,93,260,112,BS_FLAT
+    GROUPBOX        "Authentication Settings",IDC_AUTH_SETTINGS,7,93,260,115,BS_FLAT
     LTEXT           "Auth",IDC_AUTH_STATIC,21,110,19,8
     COMBOBOX        IDC_AUTHTYPE,61,108,192,30,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
     LTEXT           "User",IDC_USERNAME_STATIC,20,129,19,8
