Add new parameter for SIGv4 auth. (#42)
Add new optional parameter for use with AWS_SIGv4 authentication to connect to a cluster via SSH tunnel (for example - OpenSearch cluster is a VPC endpoint).
This parameter is required to fix request header to comply SIGv4 requirements. [Ref: link](https://stackoverflow.com/a/67683064).
---------

Signed-off-by: Yury-Fridlyand <yury.fridlyand@improving.com>

--- a/src/sqlodbc/opensearch_odbc.rc
+++ b/src/sqlodbc/opensearch_odbc.rc
@@ -62,7 +62,7 @@ LANGUAGE LANG_ENGLISH, SUBLANG_ENGLISH_US
 // Dialog
 //
 
-DLG_CONFIG DIALOGEX 65, 43, 275, 250
+DLG_CONFIG DIALOGEX 65, 43, 275, 270
 STYLE DS_SETFONT | DS_MODALFRAME | DS_3DLOOK | DS_CENTER | WS_POPUP | WS_VISIBLE | WS_CAPTION | WS_SYSMENU
 CAPTION "OpenSearch ODBC Driver DSN Setup"
 FONT 8, "MS Sans Serif", 0, 0, 0x0
@@ -72,23 +72,25 @@ BEGIN
     GROUPBOX        "Connection Settings",IDC_CONN_SETTINGS,7,28,261,56
     LTEXT           "Host",IDC_STATIC,20,46,20,8,NOT WS_GROUP
     EDITTEXT        IDC_SERVER,60,44,192,12,ES_AUTOHSCROLL
-    LTEXT           "&Port",IDC_STATIC,20,66,19,8
+    LTEXT           "Port",IDC_STATIC,20,66,19,8
     EDITTEXT        IDC_PORT,60,64,192,13,ES_AUTOHSCROLL
-    GROUPBOX        "Authentication Settings",IDC_AUTH_SETTINGS,7,93,260,92,BS_FLAT
+    GROUPBOX        "Authentication Settings",IDC_AUTH_SETTINGS,7,93,260,115,BS_FLAT
     LTEXT           "Auth",IDC_AUTH_STATIC,21,110,19,8
-    COMBOBOX        IDC_AUTHTYPE,61,108,192,30,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
+    COMBOBOX        IDC_AUTHTYPE,65,108,192,30,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
     LTEXT           "User",IDC_USERNAME_STATIC,20,129,19,8
-    EDITTEXT        IDC_USER,61,127,191,12,ES_AUTOHSCROLL | WS_DISABLED
+    EDITTEXT        IDC_USER,65,127,191,12,ES_AUTOHSCROLL | WS_DISABLED
     LTEXT           "Password",IDC_PASSWORD_STATIC,20,149,41,12
-    EDITTEXT        IDC_PASSWORD,61,147,191,12,ES_PASSWORD | ES_AUTOHSCROLL | WS_DISABLED
+    EDITTEXT        IDC_PASSWORD,65,147,191,12,ES_PASSWORD | ES_AUTOHSCROLL | WS_DISABLED
     LTEXT           "Region",IDC_REGION_STATIC,20,170,28,8
-    EDITTEXT        IDC_REGION,61,168,191,12,ES_AUTOHSCROLL | WS_DISABLED
-    PUSHBUTTON      "Advanced Options",ID_ADVANCED_OPTIONS,21,195,111,15,WS_GROUP
-    PUSHBUTTON      "Logging Options",ID_LOG_OPTIONS,144,195,108,15,WS_GROUP
-    LTEXT           "V.N.N.N",IDC_DRIVER_VERSION,10,228,108,8
-    DEFPUSHBUTTON   "OK",IDOK,119,224,44,15,WS_GROUP
-    DEFPUSHBUTTON   "Test",IDOK2,167,224,44,15,WS_GROUP
-    PUSHBUTTON      "Cancel",IDCANCEL,215,224,44,15
+    EDITTEXT        IDC_REGION,65,168,191,12,ES_AUTOHSCROLL | WS_DISABLED
+    LTEXT           "Tunnel host",IDC_TUNNEL_HOST_STATIC,20,190,56,8
+    EDITTEXT        IDC_TUNNEL_HOST,65,188,191,12,ES_AUTOHSCROLL | WS_DISABLED
+    PUSHBUTTON      "Advanced Options",ID_ADVANCED_OPTIONS,21,215,111,15,WS_GROUP
+    PUSHBUTTON      "Logging Options",ID_LOG_OPTIONS,144,215,108,15,WS_GROUP
+    LTEXT           "V.N.N.N",IDC_DRIVER_VERSION,10,248,108,8
+    DEFPUSHBUTTON   "OK",IDOK,119,244,44,15,WS_GROUP
+    DEFPUSHBUTTON   "Test",IDOK2,167,244,44,15,WS_GROUP
+    PUSHBUTTON      "Cancel",IDCANCEL,215,244,44,15
 END
 
 DLG_ADVANCED_OPTIONS DIALOGEX 0, 0, 157, 113
@@ -181,7 +183,7 @@ BEGIN
         BLOCK "040904e4"
         BEGIN
             VALUE "Comments", "OpenSearch ANSI ODBC driver"
-            VALUE "CompanyName", "Amazon"
+            VALUE "CompanyName", "OpenSearch Project"
             VALUE "FileDescription", "OpenSearch ODBC Driver (English)"
             VALUE "FileVersion", OPENSEARCH_ODBC_VERSION
             VALUE "InternalName", "sqlodbc"
