--- a/.github/workflows/release-drafter.yml
+++ b/.github/workflows/release-drafter.yml
@@ -25,6 +25,6 @@ jobs:
           draft: true
           generate_release_notes: true
           files: |
-            mac64-build.zip
+            mac64-installer.zip
             windows32-installer.zip
             windows64-installer.zip
