Personalized connector added
Signed-off-by: fepatrifork <fepa@trifork.com>

--- a/src/sqlodbc/opensearch_odbc.rc
+++ b/src/sqlodbc/opensearch_odbc.rc
@@ -239,6 +239,7 @@ BEGIN
     IDS_AUTHTYPE_NONE       "NONE"
     IDS_AUTHTYPE_BASIC      "BASIC"
     IDS_AUTHTYPE_IAM        "AWS_SIGV4"
+    IDS_AUTHTYPE_OAUTH2     "OAUTH2"
     IDS_LOGTYPE_OFF         "LOG_OFF"
     IDS_LOGTYPE_FATAL       "LOG_FATAL"
     IDS_LOGTYPE_ERROR       "LOG_ERROR"
