Prepare the branch for merge the fork
Signed-off-by: fepatrifork <fepa@trifork.com>

--- a/.gitignore
+++ b/.gitignore
@@ -68,6 +68,6 @@ build_win_debug32manual.ps1
 build_win_debug64manual.ps1
 build_win_release32manual.ps1
 build_win_release64manual.ps1
-/extensionBiConnector/
-/util-files/
+extensionBiConnector/*
+util-files/*
 DockerfileWin
