PowerBi connector now use config file for set up Oauth flow
Signed-off-by: fepatrifork <fepa@trifork.com>

--- a/.gitignore
+++ b/.gitignore
@@ -61,4 +61,6 @@ CTestTestfile.cmake
 /src/PowerBIConnector/obj/
 /src/PowerBIConnector/.vs/
 src/vcpkg_installed/
+/extensionBiConnector/
+/comparisonBiConnector/
 
